# command-line-tool

./: Cargo.toml  README.md  data.json
src/: cli.yaml  main.rs
