[package]
name = "print-users"
version = "0.1.0"
authors = ["tonytao <taotao8851@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0"
